--- a/LoanApplicationService/LoanApplicationService.csproj
+++ b/LoanApplicationService/LoanApplicationService.csproj
@@ -1,14 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\dotnet-sdk\src\Dapr.Workflow\Dapr.Workflow.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Dapr.Workflow" Version="1.10.0" />
-  </ItemGroup>
 
 </Project>
