--- a/LoanApplicationServiceConsole/LoanApplicationService.csproj
+++ b/LoanApplicationServiceConsole/LoanApplicationService.csproj
@@ -1,13 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\dotnet-sdk\src\Dapr.Workflow\Dapr.Workflow.csproj" />
-  </ItemGroup>  
-
+  </ItemGroup>
+  
 </Project>
