--- a/LoanApplicationService/LoanApplicationService.csproj
+++ b/LoanApplicationService/LoanApplicationService.csproj
@@ -7,12 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.7" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Dapr.Workflow" Version="1.11.0" />
   </ItemGroup>
 
-  <ItemGroup>
+  <!-- <ItemGroup>
     <ProjectReference Include="..\..\dotnet-sdk\src\Dapr.Workflow\Dapr.Workflow.csproj" />
-  </ItemGroup>  
+  </ItemGroup>   -->
 
 </Project>
